force-app/main/default/objects/Notification_Preference_Log__c/Notification_Preference_Log__c.object-meta.xml
<CustomObject>
    <label>Notification Preference Log</label>
    <nameField>
        <displayFormat>NPL-{00000}</displayFormat>
        <label>Notification Preference Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Preference Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>