force-app/main/default/objects/Notification_Preference_Log__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>