force-app/main/default/objects/Notification_Preference_Log__c/fields/Future_Payment_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Future_Payment_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Future Payment Reminder</description>
    <inlineHelpText>Future Payment Reminder</inlineHelpText>
    <label>Future Payment Reminder</label>
    <type>Checkbox</type>
</CustomField>