force-app/main/default/objects/Notification_Preference_Log__c/fields/Marketing_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Email Notifications</description>
    <inlineHelpText>Marketing Email Notifications</inlineHelpText>
    <label>Marketing Email Notifications</label>
    <type>Checkbox</type>
</CustomField>