force-app/main/default/objects/Notification_Preference_Log__c/fields/Payment_Success_Failure_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Payment_Success_Failure_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payment Success/Failure Notifications</description>
    <inlineHelpText>Payment Success/Failure Notifications</inlineHelpText>
    <label>Payment Success/Failure Notifications</label>
    <type>Checkbox</type>
</CustomField>