force-app/main/default/objects/Notification_Preference_Log__c/fields/Review_Action__c.field-meta.xml
<CustomField>
    <fullName>Review_Action__c</fullName>
    <label>Review Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>