force-app/main/default/objects/Notification_Preference_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Marketing_Email_Notifications__c</columns>
    <columns>Payment_Success_Failure_Notifications__c</columns>
    <columns>Future_Payment_Reminder__c</columns>
    <columns>Review_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>